# Queues

./: README
rabbitmq_k8s_celery/: README.md  dockerfile  locust.sh  pyproject.toml  start.sh
rabbitmq_k8s_celery/k8s/deployment/: celery_keda.yaml  celery_workers.yaml  fastapi_server.yaml  locust.yaml
rabbitmq_k8s_celery/k8s/helm/: rabbitmq.yaml  storageClass.yaml
rabbitmq_k8s_celery/src/: main.py
rabbitmq_k8s_celery/src/celery_tools/: worker.sh
rabbitmq_k8s_celery/src/celery_tools/celery_tasks/: tasks.py
rabbitmq_k8s_celery/src/celery_tools/config/: celery_config.py  celery_utils.py
rabbitmq_k8s_celery/src/celery_tools/serializer/: pydanticserializer.py
rabbitmq_k8s_celery/src/routes/: intregration.py
rabbitmq_k8s_celery/src/schemas/: schemas.py
rabbitmq_k8s_celery/tests/: complete_flow_load_test.py
strimzi_k8s_faust/: README.md  dockerfile  pyproject.toml  start.sh  worker.sh
strimzi_k8s_faust/k8s/: kafka.yaml
strimzi_k8s_faust/k8s/deployment/: fastapi-server.yaml  faust.yaml  faust_kde.yaml  redis.yaml
strimzi_k8s_faust/k8s/kafka/: kafka.yaml
strimzi_k8s_faust/src/: main.py
strimzi_k8s_faust/src/faust_tools/: __init__.py  __main__.py  config.py
strimzi_k8s_faust/src/faust_tools/consumer/: consumer.py
strimzi_k8s_faust/src/faust_tools/faust_schema/: schema.py
strimzi_k8s_faust/src/redis_records/: track.py  track.pyi
strimzi_k8s_faust/src/routes/: integration.py
strimzi_k8s_faust/src/schemas/: schema.py
strimzi_k8s_faust/tests/: complete_flow_load_test.py
